--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - ./code:/var/www/html
 
-  database:
+  mysql:
     build:
       context: docker/mysql
       dockerfile: Dockerfile
